minor alignment issues are fixed

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ ul {
         float: left;
     }
     nav ul {
-        width: 300px;
+        width: 200px;
         margin: 5px;
         float: right;
     }
